force-app/main/default/objects/conference360__Form__c/fields/conference360__Encrypted_ID__c.field-meta.xml
<CustomField>
    <fullName>conference360__Encrypted_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Indexed and encrypted key field that is used by the Events API and Attendee Urls - is generated in before insert and update triggers if is ever blank</description>
    <externalId>true</externalId>
    <inlineHelpText>Indexed and encrypted key field that is used by the Events API and Attendee Urls - is generated in before insert and update triggers if is ever blank</inlineHelpText>
    <label>Encrypted ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>