force-app/main/default/objects/conference360__Form__c/fields/conference360__Root_Object__c.field-meta.xml
<CustomField>
    <fullName>conference360__Root_Object__c</fullName>
    <description>currently not used</description>
    <label>Root Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>